crates/vize_atelier_vapor/src/generate/snapshots/vize_atelier_vapor__generate__tests__generate_simple.snap
---
source: crates/vize_atelier_vapor/src/generate/mod.rs
expression: result.code.as_str()
---
import { template as _template } from 'vue';
const t0 = _template("<div>hello</div>", true)

export function render(_ctx) {
  const n0 = t0()
  return n0
}
